//
//  ContentView.swift
//  movie-sans-image
//
//  Created by Adam Pagels on 2025-04-03.
//

import SwiftUI

struct MainView: View {
    private let apiService = APIService()
    private let coreDataService = CoreDataService()
    private let movieWatchlistStatusService = MovieWatchlistStatusService()
    var watchlistViewModel: WatchlistViewModel
    var searchViewModel: SearchViewModel
    var homeViewModel: HomeViewModel
    @State private var homeRouter = NavigationRouter()
    @State private var searchRouter = NavigationRouter()
    @State private var watchlistRouter = NavigationRouter()

    init() {
        watchlistViewModel = WatchlistViewModel(coreDataService: coreDataService)
        homeViewModel = HomeViewModel(
            apiService: apiService,
            movieWatchlistStatusService: movieWatchlistStatusService
        )
        searchViewModel = SearchViewModel(
            apiService: apiService,
            movieWatchlistStatusService: movieWatchlistStatusService
        )

        let tabBarAppearance = UITabBarAppearance()
        tabBarAppearance.configureWithOpaqueBackground()
        tabBarAppearance.stackedLayoutAppearance.selected.titleTextAttributes = [
            .foregroundColor: UIColor(Color.tertiaryColor),
        ]

        UINavigationBar.appearance().largeTitleTextAttributes = [.font: UIFont(name: "Futura-Bold", size: 30)!]

        UITabBar.appearance().standardAppearance = tabBarAppearance
        UITabBar.appearance().scrollEdgeAppearance = tabBarAppearance
    }

    var body: some View {
        TabView {
            Tab("Home", systemImage: "house.fill") {
                NavigationStack(path: $homeRouter.path) {
                    HomeView(homeViewModel: homeViewModel, watchlistViewModel: watchlistViewModel)
                        .background(Color.backgroundColor)
                }
            }

            Tab("Search", systemImage: "magnifyingglass") {
                NavigationStack(path: $searchRouter.path) {
                    SearchView(
                        watchlistViewModel: watchlistViewModel,
                        searchViewModel: searchViewModel, router: searchRouter
                    )
                    .background(Color.backgroundColor)
                    .navigationDestination(for: Route.self) { route in
                        switch route {
                        case let .genre(genre):
                            GenreView(
                                genre: genre,
                                watchlistViewModel: watchlistViewModel,
                                genreViewModel: GenreViewModel(
                                    apiService: apiService,
                                    movieWatchlistStatusService: movieWatchlistStatusService
                                )
                            )
                            .background(Color.backgroundColor)
                        }
                    }
                }
                .tint(.primaryColor)
            }

            Tab("Watchlist", systemImage: "list.bullet") {
                NavigationStack(path: $watchlistRouter.path) {
                    WatchlistView(watchlistViewModel: watchlistViewModel)
                        .background(Color.backgroundColor)
                }
            }
        }
        .accentColor(.tertiaryColor)
    }
}

#Preview {
    MainView()
}
