...
            Color.backgroundColor
                .edgesIgnoringSafeArea(.all)
            VStack(alignment: .leading, spacing: 16) {
                Text("\(movie.title)")
                    .font(.custom("Futura-Bold", size: 32))
                    .frame(maxWidth: .infinity, alignment: .topLeading)
                    .accessibilityIdentifier("DetailViewMovieTitle")

                if movie.vote_count ?? 0 > 0 {
                    HStack {
                        Image(systemName: "star.fill")
                            .foregroundStyle(Color.tertiaryColor)
                            .fontWeight(.bold)
...
                }
                Text(movie.overview ?? "")
                    .font(.custom("Avenir", size: 18))
                Spacer()
            }
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("DetailViewSheet")
            .padding()
            .padding()
        }
    }
}

...
