...
                TextField(
                    "",
                    text: $searchText,
                    prompt: Text("Search for movies")
                        .foregroundColor(.gray)
                )
                .accessibilityIdentifier("SearchBar")
                .accessibilityValue(hasFocus ? "focused" : "unfocused")
                .font(.custom("Futura", size: 16))
                .onChange(of: searchText) { _, newValue in
                    onChange(newValue)
                }
                .font(.callout)
...
            .foregroundColor(Color.secondaryColor)
            .sensoryFeedback(.error, trigger: emptySearchAttempts)
            .modifier(Shake(animatableData: CGFloat(emptySearchAttempts)))

            if hasFocus {
                Text("Cancel")
                    .accessibilityIdentifier("SearchBarCancelButton")
                    .font(.custom("Futura", size: 12))
                    .onTapGesture {
                        hasFocus = false
                    }
            }
        }
...
