//
//  movie_sans_imageUITests.swift
//  movie-sans-imageUITests
//
//  Created by Adam Pagels on 2025-04-03.
//

import XCTest

func assertMovieTapShowsDetails(in app: XCUIApplication) {
    let movieItem = app.buttons["MovieListItem"].firstMatch
    movieItem.tap()
    XCTAssertTrue(app.otherElements["DetailViewSheet"].exists)
}

final class movie_sans_imageUITests: XCTestCase {
    let app = XCUIApplication()

    override func setUpWithError() throws {
        continueAfterFailure = false

        app.launchArguments += ["-ui-testing"]

        if app.state != .notRunning {
            app.terminate()
        }

        app.launch()
    }

    override func tearDownWithError() throws {
        if app.state != .notRunning {
            app.terminate()
        }
    }

    func testMovieTitleInHomeViewPressOpensDetailView() {
        assertMovieTapShowsDetails(in: app)
    }

    func testMovieTitleInGenreViewPressOpensDetailView() {
        app.tabBars["Tab Bar"].buttons["Search"].tap()
        app.buttons["GenreListItem"].firstMatch.tap()

        assertMovieTapShowsDetails(in: app)
    }

    func testMovieTitleInWatchlistViewPressOpensDetailView() {
        let movieItemInHomeView = app.buttons["MovieListItem"].firstMatch
        let movieLabel = movieItemInHomeView.label

        app.buttons["Add"].firstMatch.tap()
        app.tabBars["Tab Bar"].buttons["Watchlist"].tap()

        app.buttons[movieLabel].tap()
        XCTAssertTrue(app.otherElements["DetailViewSheet"].exists)
    }

    func testMovieTitleInSearchViewPressOpensDetailView() {
        app.tabBars["Tab Bar"].buttons["Search"].tap()
        let searchBar = app.textFields["SearchBar"]

        searchBar.tap()
        app.keys["M"].tap()
        app.keys["o"].tap()
        app.keys["v"].tap()
        app.keys["i"].tap()
        app.keys["e"].tap()

        app.keyboards.buttons["search"].tap()

        assertMovieTapShowsDetails(in: app)
    }

    func testDetailViewOpensDetailViewWithSelectedMovieTitle() {
        let movieItem = app.buttons["MovieListItem"].firstMatch
        movieItem.tap()

        let movieDetailSheet = app.otherElements["DetailViewSheet"]
        XCTAssertTrue(movieDetailSheet.exists)

        let movieTitleInDetailSheet = app.staticTexts["DetailViewMovieTitle"]

        XCTAssertEqual(movieItem.label, movieTitleInDetailSheet.label)
    }

    func testGenreSelectionNavigatesToViewWithMatchingGenreTitle() {
        let searchTab = app.tabBars["Tab Bar"].buttons["Search"]
        searchTab.tap()

        let genreItem = app.buttons["GenreListItem"].firstMatch
        let buttonLabel = genreItem.label
        genreItem.tap()

        let navTitle = app.navigationBars.element.staticTexts.firstMatch

        XCTAssertEqual(buttonLabel, navTitle.label)
    }

    func testMovieCanBeAddedAndRemovedFromWatchlist() {
        app.buttons["Add"].firstMatch.tap()

        let movieItemInHomeView = app.buttons["MovieListItem"].firstMatch
        let movieLabel = movieItemInHomeView.label

        app.tabBars["Tab Bar"].buttons["Watchlist"].tap()

        let movieItemInWatchlistView = app.buttons[movieLabel]
        movieItemInWatchlistView.swipeLeft()

        app.buttons["SwipeToDeleteButton"].tap()

        XCTAssertFalse(movieItemInWatchlistView.exists)
    }

    func testNestedTabsProperlyNavigate() {
        app.tabBars["Tab Bar"].buttons["Search"].tap()
        app.buttons["GenreListItem"].firstMatch.tap()

        let movieItemInGenreView = app.buttons["MovieListItem"].firstMatch
        let movieLabel = movieItemInGenreView.label

        app.buttons["Add"].firstMatch.tap()
        app.tabBars["Tab Bar"].buttons["Watchlist"].tap()

        let movieItemInWatchlistView = app.buttons[movieLabel]
        movieItemInWatchlistView.swipeLeft()

        XCTAssertTrue(movieItemInWatchlistView.exists)

        app.buttons["SwipeToDeleteButton"].tap()
        XCTAssertFalse(movieItemInWatchlistView.exists)

        app.tabBars["Tab Bar"].buttons["Search"].tap()

        XCTAssertTrue(movieItemInGenreView.exists)

        app.tabBars["Tab Bar"].buttons["Home"].tap()

        let movieItemInHomeView = app.buttons["MovieListItem"].firstMatch

        XCTAssertTrue(movieItemInHomeView.exists)
    }

    func testSearchBarFocusStates() {
        app.tabBars["Tab Bar"].buttons["Search"].tap()
        let searchBarCancelButton = app.staticTexts["SearchBarCancelButton"]
        let searchBar = app.textFields["SearchBar"]

        searchBar.tap()
        XCTAssertTrue(searchBarCancelButton.exists)
        XCTAssertEqual(searchBar.value as? String, "focused", "Search bar should be focused after tapping")

        searchBarCancelButton.tap()

        XCTAssertEqual(searchBar.value as? String, "unfocused", "Search bar should be unfocused after tapping cancel")
        XCTAssertFalse(searchBarCancelButton.exists, "Cancel button should not be visible when search bar is unfocused")
    }

//    @MainActor
//    func testLaunchPerformance() throws {
//        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
//            measure(metrics: [XCTApplicationLaunchMetric()]) {
//                XCUIApplication().launch()
//            }
//        }
//    }
}
